[package]
name = "performance-engine"
version = "0.2.0"
edition = "2021"

[lib]
name = "engine"
crate-type = ["cdylib"]

[features]
default = []
python-extension = ["pyo3/extension-module"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
histogram = "0.9.1"
indicatif = "0.17.8"
clap = { version = "4.5.1", features = ["derive"] }
clap_derive="4.5.0"
anyhow = "1.0"
prettytable = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
pyo3 = { version = "0.20.3", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }

[build-dependencies]
maturin = "1.4.0"
