[package]
name = "atomic-bomb-engine"
version = "0.2.3"
edition = "2021"
description = "A high performance torture testing engine"
license = "MIT"

[lib]
name = "atomic_bomb_engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
histogram = "0.9.1"
indicatif = "0.17.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
lazy_static = "1.4.0"
parking_lot = "0.12.1"
